--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ ext {
     multidexVer = '1.0.3'
     glideVer = '4.11.0'
     smoothProgressBarVer = '1.3.0'
+    colorRatingBarVer = '1.0.1'
 }
 
 dependencies {
@@ -71,4 +72,5 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVer"
     annotationProcessor "com.github.bumptech.glide:compiler:$glideVer"
     implementation "com.github.castorflex.smoothprogressbar:library-circular:$smoothProgressBarVer"
+    implementation "hyogeun.github.com.colorratingbar:ColorRatingBar:$colorRatingBarVer"
 }
